Add endpoint as /books/:id GET and fix /books POST to enable Rakuten API to search old books
